--- a/elasticsearch-crate-plugin/crate-admin/app/styles/main.scss
+++ b/elasticsearch-crate-plugin/crate-admin/app/styles/main.scss
@@ -18,6 +18,10 @@ iframe {
 	height: 400px;
 }
 
+.ace_editor { top: 0; bottom: 0; right: 0; left: 0; }
+
+.ace_editor_wrapper { position : relative; height: 200px}
+
 .navbar .nav > li {
     line-height: 45px;
 }
